must install podman
Signed-off-by: Ryan Cook <rcook@redhat.com>

--- a/build.yaml
+++ b/build.yaml
@@ -4,6 +4,11 @@
   collections:
     - containers.podman
   tasks:
+  - name: ensure podman is installed
+    package:
+      name: podman
+      state: present
+
   - name: podman build ami
     containers.podman.podman_container:
       name: myapplication
