--- a/build.yaml
+++ b/build.yaml
@@ -5,9 +5,8 @@
     - containers.podman
   tasks:
   - name: podman install
-    package:
-      name: podman
-      state: latest
+    shell: microdnf install -y podman
+
   - name: podman build ami
     containers.podman.podman_container:
       name: myapplication
