--- a/build.yaml
+++ b/build.yaml
@@ -4,15 +4,24 @@
   collections:
     - containers.podman
   tasks:
-  - name: podman build ami
-    containers.podman.podman_container:
+  - name: run the above as a podman kubernetes pod
+    containers.podman.podman_pod:
       name: osbuild
-      cap_add: ["SYS_CHROOT", "SETFCAP", "SETGID", "SETUID", "SYS_ADMIN"]
-      image: quay.io/rcook/bootc:latest
       state: started
-      privileged: true
-      restart: false
-      restart_policy: "no"
-      command: ["--type", "ami", "--aws-ami-name", "centos-bootc-x86-rc", "--aws-bucket", "somaltest", "--aws-region", "us-east-1", "--target-arch", "x86_64", "quay.io/rcook/useradd:latest"]
-      volumes:
-      - /Users/rcook/.aws:/root/.aws
+      containers:
+        - name: osbuild
+          security_context:
+            privileged: true
+            capabilities:
+              add:
+                - SYS_CHROOT
+                - SETFCAP
+                - SETGID
+                - SETUID
+                - SYS_ADMIN
+              selinuxOptions:
+                type: spc_t
+          image: quay.io/rcook/bootc:latest
+          command: ["--type", "ami", "--aws-ami-name", "centos-bootc-x86-rc", "--aws-bucket", "somaltest", "--aws-region", "us-east-1", "--target-arch", "x86_64", "quay.io/rcook/useradd:latest"]
+          volumes:
+          - /Users/rcook/.aws:/root/.aws
