--- a/build.yaml
+++ b/build.yaml
@@ -9,7 +9,15 @@
       name: podman
       state: present
 
-  - name: run the build in a kubernetes pod
-    containers.podman.podman_play:
-      kube_file: podman_os_play.yaml
+  - name: podman build ami
+    containers.podman.podman_container:
+      name: osbuild
+      cap_add: ["SYS_CHROOT", "SETFCAP", "SETGID", "SETUID", "SYS_ADMIN"]
+      image: quay.io/rcook/bootc:latest
       state: started
+      privileged: true
+      restart: false
+      restart_policy: "no"
+      command: ["--type", "ami", "--aws-ami-name", "centos-bootc-x86-rc", "--aws-bucket", "somaltest", "--aws-region", "us-east-1", "--target-arch", "x86_64", "quay.io/rcook/useradd:latest"]
+      volumes:
+      - ~/.aws:/root/.aws
