--- a/build.yaml
+++ b/build.yaml
@@ -9,6 +9,29 @@
       name: podman
       state: present
 
+  - name: add the directory .aws to home
+    file:
+      path: ~/.aws
+      state: directory
+      mode: '0700'
+
+  - name: create the file credentials
+    copy:
+      content: |
+        [default]
+        aws_access_key_id = '{{ lookup("env", "AWS_ACCESS_KEY_ID") }}'
+        aws_secret_access_key = '{{ lookup("env", "AWS_SECRET_ACCESS_KEY") }}'
+      dest: ~/.aws/credentials
+      mode: '0600'
+
+  - name: create the file config
+    copy:
+      content: |
+        [default]
+        region = us-east-1
+      dest: ~/.aws/config
+      mode: '0600'
+
   - name: podman build ami
     containers.podman.podman_container:
       name: osbuild
