--- a/build.yaml
+++ b/build.yaml
@@ -20,8 +20,8 @@
     copy:
       content: |
         [default]
-        aws_access_key_id = '{{ lookup("env", "AWS_ACCESS_KEY_ID") }}'
-        aws_secret_access_key = '{{ lookup("env", "AWS_SECRET_ACCESS_KEY") }}'
+        aws_access_key_id = {{ lookup("env", "AWS_ACCESS_KEY_ID") }}
+        aws_secret_access_key = {{ lookup("env", "AWS_SECRET_ACCESS_KEY") }}
       dest: ~/.aws/credentials
       mode: '0600'
 
