--- a/build.yaml
+++ b/build.yaml
@@ -1,5 +1,5 @@
 ---
-- hosts: localhost
+- hosts: builder.octo-emerging.redhataicoe.com
   become: true
   gather_facts: true
   collections:
@@ -41,7 +41,7 @@
       privileged: true
       restart: false
       restart_policy: "no"
-      command: ["--type", "ami", "--aws-ami-name", "centos-bootc-x86-rc", "--aws-bucket", "somaltest", "--aws-region", "us-east-1", "--target-arch", "x86_64", "quay.io/rcook/useradd:latest"]
+      command: ["--type", "ami", "--aws-ami-name", "centos-bootc-x86-rc", "--aws-bucket", "{{ bucket }}", "--aws-region", "{{ region }}", "--target-arch", "{{ arch }}", "quay.io/rcook/useradd:latest"]
       volumes:
       - "/{{ ansible_user_id }}/.aws:/root/.aws"
 
@@ -50,7 +50,7 @@
       name: osbuild
     register: container_info
     until: container_info.container.State.Status != 'running'
-    retries: 60
+    retries: 300
     delay: 10
 
   - block:
