--- a/bootc_build.yaml
+++ b/bootc_build.yaml
@@ -17,10 +17,10 @@
 
   - name: build the containerfile
     containers.podman.podman_image:
-      name: bootc
+      name: "{{ appName}}"
       path: "/tmp/app/{{ path }}"
       build:
         extra_args: "--build-arg sshpubkey={{ pubKey}}"
       push: true
       push_args:
-        dest: "{{ registry }}/{{ image }}"
+        dest: "{{ registry }}/{{ image }}:latest"
