--- a/os_build.yaml
+++ b/os_build.yaml
@@ -36,12 +36,12 @@
   - name: podman build ami
     containers.podman.podman_container:
       name: osbuild
-      image: quay.io/rcook/bootc:latest
+      image: quay.io/centos-bootc/bootc-image-builder:latest
       state: started
       privileged: true
       restart: false
       restart_policy: "no"
-      command: ["--type", "ami", "--aws-ami-name", "centos-bootc-x86-rc", "--aws-bucket", "{{ bucket }}", "--aws-region", "{{ region }}", "--target-arch", "{{ arch }}", "{{ registry }}/{{ image }}"]
+      command: ["--type", "ami", "--aws-ami-name", "centos-bootc-x86-rc", "--aws-bucket", "{{ bucket }}", "--aws-region", "{{ region }}", "--target-arch", "{{ arch }}", "{{ image }}"]
       volumes:
       - "/{{ ansible_user_id }}/.aws:/root/.aws"
 
