--- a/bootc_build.yaml
+++ b/bootc_build.yaml
@@ -1,5 +1,5 @@
 ---
-- hosts: builder.octo-emerging.redhataicoe.com
+- hosts: amd
   become: true
   gather_facts: true
   collections:
@@ -14,6 +14,7 @@
     git:
       repo: "{{ repo }}"
       dest: "/tmp/app"
+    register: clone
 
   - name: build the containerfile
     containers.podman.podman_image:
@@ -27,4 +28,6 @@
 
   - name: set the image tag
     set_stats:
-      image: "{{ registry }}/{{ image }}/{{ appName }}:latest"
+      data:
+        image: "{{ registry }}/{{ image }}/{{ appName }}:latest"
+        revison: "{{ clone.after }}"
