--- a/bootc_build.yaml
+++ b/bootc_build.yaml
@@ -2,6 +2,7 @@
 - hosts: builder.octo-emerging.redhataicoe.com
   become: true
   gather_facts: true
+  remote_user: ec2-user
   collections:
     - containers.podman
   tasks:
@@ -25,6 +26,16 @@
       push: true
       push_args:
         dest: "{{ registry }}/{{ image }}/{{ appName }}:latest"
+    when: {{ pubKey }} is defined
+
+  - name: build the containerfile
+    containers.podman.podman_image:
+      name: "{{ appName}}"
+      path: "/tmp/app/{{ path }}"
+      push: true
+      push_args:
+        dest: "{{ registry }}/{{ image }}/{{ appName }}:latest"
+    when: {{ pubKey }} is not defined
 
   - name: set the image tag
     set_stats:
