--- a/bootc_build.yaml
+++ b/bootc_build.yaml
@@ -26,7 +26,7 @@
       push: true
       push_args:
         dest: "{{ registry }}/{{ image }}/{{ appName }}:latest"
-    when: "{{ pubKey }}" is defined
+    when: "{{ pubKey }} is defined"
 
   - name: build the containerfile
     containers.podman.podman_image:
@@ -35,7 +35,7 @@
       push: true
       push_args:
         dest: "{{ registry }}/{{ image }}/{{ appName }}:latest"
-    when: "{{ pubKey }}" is not defined
+    when: "{{ pubKey }} is not defined"
 
   - name: set the image tag
     set_stats:
