--- a/os_build.yaml
+++ b/os_build.yaml
@@ -38,7 +38,7 @@
       name: "{{ appName }}"
       image: quay.io/centos-bootc/bootc-image-builder:latest
       state: started
-      privileged: true
+      security_opt: "label=disable"
       restart: false
       restart_policy: "no"
       command: ["--type", "ami", "--aws-ami-name", "bootc-{{appName}}-{{ revision }}", "--aws-bucket", "{{ bucket }}", "--aws-region", "{{ region }}", "--target-arch", "{{ arch }}", "{{ pushed_image }}"]
