--- a/update.yaml
+++ b/update.yaml
@@ -3,12 +3,10 @@
   become: true
   gather_facts: true
   tasks:
-  - name: pull the latest bootc image using podman
-    containers.podman.podman_image:
-      name: "{{ image }}"
-      pull: true
-    register: image_pull
-
   - name: trigger bootc swap if image was updated
-    command: "bootc switch {{ image }}"
+    command: "bootc upgrade --apply"
+    when: image_pull.changed
+
+  - name: reboot if image was updated
+    command: "reboot"
     when: image_pull.changed
