no more template
Signed-off-by: Ryan Cook <rcook@redhat.com>

--- a/quadlet_container.yaml
+++ b/quadlet_container.yaml
@@ -22,11 +22,16 @@
       push_args:
         dest: "{{ registry }}/{{ image }}"
 
-  - name: Generate the httpd quadlet template
-    template:
-      remote_src: yes
-      src: "/tmp/app/{{ path }}/templates/httpd.j2"
-      dest: "/tmp/app/{{ path }}/quadlet/{{ appName }}.container"
+  - name: define the quadlet file
+    containers.podman.podman_image:
+      name: "{{ registry }}/{{ image }}/{{ appName }}:{{ clone.after }}"
+      state: quadlet
+      quadlet_dir: "/tmp/app/{{ path }}/quadlet"
+      quadlet_filename: "{{ appName }}.container"
+      quadlet_options:
+      - |
+        [Install]
+        WantedBy=multi-user.target default.target
 
   - name: Generate the application bootc image
     containers.podman.podman_image:
