--- a/quadlet_container.yaml
+++ b/quadlet_container.yaml
@@ -51,12 +51,12 @@
   - name: tag images as latest
     containers.podman.podman_tag:
       image: "localhost/{{ appName }}:{{ clone.after }}"
-      target_name: "{{ registry }}/{{ image }}/{{ appName }}:latest"
+      target_names: "{{ registry }}/{{ image }}/{{ appName }}:latest"
 
   - name: tag images as latest
     containers.podman.podman_tag:
       image: "localhost/bootc-{{ appName }}:{{ clone.after }}"
-      target_name: "{{ registry }}/{{ image }}/bootc-{{ appName }}:latest"
+      target_names: "{{ registry }}/{{ image }}/bootc-{{ appName }}:latest"
 
   - name: clean up the image
     containers.podman.podman_image:
