--- a/quadlet_container.yaml
+++ b/quadlet_container.yaml
@@ -1,6 +1,7 @@
 ---
-- hosts: builder.octo-emerging.redhataicoe.com
+- hosts: builder
   remote_user: ec2-user
+  become: true
   collections:
     - containers.podman
   tasks:
@@ -30,29 +31,19 @@
       repo: "{{ repo }}"
       dest: "/tmp/app"
     delegate_to: localhost
+    become: false
 
-  - name: modify the template in the ansible-templates directory to include the new image
-    ansible.builtin.template:
-      src: "/tmp/app/{{ path }}/bootc/ansible-templates/{{ item[0] }}"
-        dest: "/tmp/app/{{ path }}/bootc/build/{{ item[1] }}"
-        mode: 0644
-        vars:
-          appName: "{{ appName }}"
-          image: "{{ image }}"
-          registry: "{{ registry }}"
-          revision: "{{ clone.after }}"
-      with_nested:
-        - [ 'chatbot.image.j2', 'chatbot.image' ]
-        - [ 'chatbot.kube.j2', 'chatbot.kube' ]
-        - [ 'chatbot.yaml.j2', 'chatbot.yaml' ]
+  - name: Template files
+    template:
+      src: "{{ item }}"
+      dest: "/tmp/app/{{ path }}/bootc/build/{{ item | basename | replace('.j2', '') }}"
+      mode: '0644'
+    with_fileglob:
+    - "/tmp/app/{{ path }}/bootc/ansible-templates/*"
 
   - name: Generate the application bootc image
     containers.podman.podman_image:
       name: "bootc-{{ appName}}:{{ clone.after }}"
-      security_opts:
-        - "label=disable"
-      capabilities:
-        - CAP_SYS_ADMIN
       build:
         file: "Containerfile"
       path: "/tmp/app/{{ path }}/bootc"
