--- a/quadlet_container.yaml
+++ b/quadlet_container.yaml
@@ -61,6 +61,14 @@
       image: "localhost/bootc-{{ appName }}:{{ clone.after }}"
       target_names: "{{ registry }}/{{ image }}/bootc-{{ appName }}:latest"
 
+  - name: push the two new tagged images
+    containers.podman.podman_image:
+      name: "{{ item }}"
+      push: true
+    with_items:
+      - "{{ registry }}/{{ image }}/{{ appName }}:latest"
+      - "{{ registry }}/{{ image }}/bootc-{{ appName }}:latest"
+
   - name: clean up the image
     containers.podman.podman_image:
       name: "{{ item }}"
