--- a/bootc_build.yaml
+++ b/bootc_build.yaml
@@ -17,7 +17,7 @@
       name: "{{ appName}}"
       path: "/tmp/app/{{ path }}"
       build:
-        extra_args: "--build-arg sshpubkey={{ pubKey}}"
+        extra_args: "--build-arg sshpubkey=cat $(cat ~/.ssh/id_rsa.pub)"
       push: true
       push_args:
         dest: "{{ registry }}/{{ image }}/{{ appName }}:latest"
