--- a/bootc_build.yaml
+++ b/bootc_build.yaml
@@ -15,6 +15,8 @@
   - name: Generate the application bootc image
     containers.podman.podman_image:
       name: "{{ appName}}"
+      build_args:
+        extra_args: "--build-arg sshpubkey=\"$(cat ~/.ssh/id_rsa.pub)\""
       build:
         file: "Containerfile"
       path: "/tmp/bootc/{{ path }}"
