--- a/bootc_build.yaml
+++ b/bootc_build.yaml
@@ -16,7 +16,7 @@
     containers.podman.podman_image:
       name: "{{ appName}}"
       build:
-        extra_args: "--build-arg sshpubkey={{ lookup('file', '~/.ssh/id_rsa.pub') | replace('\\n', '') | quote }}"
+        extra_args: "--build-arg sshpubkey={{ lookup('file', '/home/ec2-user/.ssh/id_rsa.pub') | replace('\\n', '') | quote }}"
         file: "Containerfile"
       path: "/tmp/bootc/{{ path }}"
       push: true
