--- a/update.yaml
+++ b/update.yaml
@@ -4,7 +4,7 @@
   gather_facts: true
   tasks:
   - name: Upgrade bootc
-    bootc_upgrade:
+    cooktheryan.bootc_upgrade:
       apply: true
     register: result
 
